--- a/zhenbai.css
+++ b/zhenbai.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     height: 100vh;
+    font-family: sans-serif;
 }
 
 body {
@@ -10,18 +11,26 @@ body {
     height: 100vh;
 }
 
-#card-area-container {
+#container {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    min-height: 70vh;
+    position: absolute;
+    bottom: 0vh;
+    left: 0;
+    right: 0;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
 
-#card-area {
+.card {
+    flex-grow: 1;
     font-size: 70px;
     text-align: center;
+    max-width: 100vw;
+    overflow-x: auto;
 }
 
 .tone-0 { color: #999; }
@@ -41,7 +50,7 @@ body {
 }
 
 #control-container button {
-    font-size: 50px;
+    font-size: 30px;
     padding: 10px;
     margin: 0 10px;
     min-width: 100px;
