--- a/zhenbai.css
+++ b/zhenbai.css
@@ -14,7 +14,7 @@ body {
 #container {
     margin: 0;
     padding: 0;
-    min-height: 70vh;
+    min-height: 80vh;
     position: absolute;
     bottom: 0vh;
     left: 0;
@@ -31,6 +31,10 @@ body {
     text-align: center;
     overflow-x: auto;
     white-space: nowrap;
+}
+
+.card#card-w2 {
+    font-size: 25px;
 }
 
 .tone-0 { color: #999; }
